# project-euler

./: CMakeLists.txt
src/: util.h
src/problem1/: CMakeLists.txt  main.cpp
src/problem2/: CMakeLists.txt  main.cpp
src/problem3/: CMakeLists.txt  main.cpp
src/problem4/: CMakeLists.txt  main.cpp
src/problem5/: CMakeLists.txt  main.cpp
src/problem6/: CMakeLists.txt  main.cpp
