cmake_minimum_required(VERSION 2.8.12)
project(euler)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_subdirectory("src/problem1")
add_subdirectory("src/problem2")
add_subdirectory("src/problem3")
add_subdirectory("src/problem4")
add_subdirectory("src/problem5")
add_subdirectory("src/problem6")